mcrl2_add_library(mcrl2_pg
  SOURCES
	source/Abortable.cpp
	source/ComponentSolver.cpp
	source/DecycleSolver.cpp
	source/DeloopSolver.cpp
	source/FocusListLiftingStrategy.cpp
	source/Graph.cpp
	source/LiftingStrategy.cpp
	source/LinearLiftingStrategy.cpp
	source/MaxMeasureLiftingStrategy.cpp
	source/OldMaxMeasureLiftingStrategy.cpp
	source/ParityGame.cpp
	source/ParityGame_IO.cpp
	source/ParityGameSolver.cpp
	source/ParityGame_verify.cpp
	source/PredecessorLiftingStrategy.cpp
	source/PriorityPromotionSolver.cpp
	source/RecursiveSolver.cpp
	source/SmallProgressMeasures.cpp
  DEPENDS
    mcrl2_pbes
)

add_subdirectory(example)
