add_subdirectory(confcheck)
add_subdirectory(lpstransform)
add_subdirectory(mcrl2rewrite)
add_subdirectory(mcrl2transform)
add_subdirectory(mcrl2typecheck)
add_subdirectory(pbes2bdd)
add_subdirectory(pbestransform)
add_subdirectory(reduce_pbes)
add_subdirectory(reduce_process)

if(MCRL2_ENABLE_SYLVAN)
  add_subdirectory(ltsconvertsymbolic)
  add_subdirectory(pbesbddsolve)
endif()

if(MCRL2_ENABLE_BOOST_JSON_SUPPORT)
  add_subdirectory(lps2jani)
endif()
