add_subdirectory(confcheck)
add_subdirectory(lpstransform)
add_subdirectory(mcrl2rewrite)
add_subdirectory(mcrl2transform)
add_subdirectory(mcrl2typecheck)
add_subdirectory(pbestransform)
add_subdirectory(reduce_pbes)
add_subdirectory(reduce_process)
add_subdirectory(ltsconvertsymbolic)
add_subdirectory(pbesbddsolve)
add_subdirectory(lps2jani)