add_subdirectory(besconvert)
add_subdirectory(lpscleave)
add_subdirectory(lpscombine)
add_subdirectory(lpsrealelm)
add_subdirectory(lpssymbolicbisim)
add_subdirectory(ltscombine)
add_subdirectory(pbes2cvc4)
add_subdirectory(pbes2yices)
add_subdirectory(pbesabsinthe)
add_subdirectory(pbesbackelm)
add_subdirectory(pbeschain)
add_subdirectory(pbesfixpointsolve)
add_subdirectory(pbespareqelm)
add_subdirectory(pbespor)
add_subdirectory(pbessymbolicbisim)
add_subdirectory(symbolic_exploration)